--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+	"http://www.w3.org/TR/html4/strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   
@@ -14,12 +14,18 @@
     
     <div id="doc4" class="yui-t1">
       <div id="hd" role="banner">
-        <div class="yui-g">
+        <div class="yui-gb">
           <div class="yui-u first">
             <h1><%= link_to 'My Vernacular', root_path %></h1>
           </div>
+			
+			<div class="yui-u">
+				<%= link_to_unless_current 'buildings', buildings_path %>
+			</div>
+			
           <div class="yui-u">
-            <% if current_user %>
+            
+			<% if current_user %>
               <%= link_to "My Profile", account_path %>
             <% else %>
               <%= link_to "Sign up!", new_account_path %>
@@ -27,18 +33,8 @@
           </div>
         </div>
       </div>
-        <div id="bd" role="main">
-          <div id="yui-main">
-            <div class="yui-b"><div class="yui-g">
-              <%= yield %>
-            </div>
-          </div>
-        </div>
-        <div id="mainNav" class="yui-b">
-          <ul>
-            <li><%= link_to_unless_current 'buildings', buildings_path %></li>
-          </ul>
-        </div>
+      <div id="bd" role="main">
+        <%= yield %>
       </div>
       <div id="ft" role="contentinfo">
         Copyright &#169; 2009 XYZ
